--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -23,7 +23,7 @@ main section.forgot-password {
   font-family: "Inter", sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: flex-start;
   position: relative;
 }
