--- a/src/assets/css/payment-page.css
+++ b/src/assets/css/payment-page.css
@@ -1,63 +1,3 @@
-body {
-  font-family: "Mulish", sans-serif;
-  position: relative;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.24);
-  z-index: 1;
-  transition: 0.5s ease-in-out;
-}
-
-/* Nav */
-.navbar-light .navbar-toggler {
-  border: 0;
-}
-
-.navbar-light .navbar-toggler-icon {
-  background-image: url(../img/hamburger-menu.png);
-}
-
-nav.navbar.payment {
-  filter: drop-shadow(0px 8px 24px rgba(186, 186, 186, 0.16));
-}
-
-.navbar-nav {
-  margin-left: 70px;
-  text-align: center;
-  white-space: nowrap;
-  display: flex;
-  align-items: center;
-}
-
-.navbar-brand img {
-  width: 130px;
-  height: 51px;
-}
-
-.navbar-nav .nav-item .nav-link {
-  font-weight: 600;
-  color: #414141;
-  margin-right: 46px;
-}
-
-.navbar-nav .nav-item .nav-link:hover,
-nav .nav-link:hover,
-.dropdown a.dropdown-toggle:hover {
-  color: #757474;
-}
-
-nav .nav-link {
-  font-weight: 600;
-  color: #414141;
-  white-space: nowrap;
-}
-
 .navbar-nav .form-search.payment img {
   width: 20px;
   height: 20px;
@@ -91,25 +31,8 @@ nav .nav-link {
   color: #a0a3bd;
 }
 
-.dropdown a.dropdown-toggle {
-  font-weight: 600;
-  color: #414141;
-  text-decoration: none;
-}
-
-.ic-search {
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-}
-
-.img-user {
-  width: 56px;
-  height: 56px;
-}
-
 nav.total-payment {
-  margin-top: 85px;
+  margin-top: 77px;
 }
 
 /* Total Payment */
@@ -216,7 +139,7 @@ nav.total-payment p {
   padding-left: 25px;
 }
 
-.input-group-text {
+.input-group-text.payment-page {
   height: 54px;
   border: 1px solid #dedede;
   background-color: #fff;
@@ -344,162 +267,7 @@ nav.total-payment p {
   color: #5f2eea;
 }
 
-/* Footer */
-footer {
-  background-color: #fff;
-}
-
-footer .logo {
-  width: 183px;
-  height: 71px;
-  margin-bottom: 16px;
-}
-
-footer p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 32px;
-  letter-spacing: 0.75px;
-  color: #6e7191;
-  white-space: nowrap;
-}
-
-footer .copyright {
-  font-weight: 400;
-  font-size: 14px;
-  letter-spacing: 0.5px;
-  color: #4e4b66;
-}
-
-footer ul {
-  list-style: none;
-}
-
-footer nav p.nav-link {
-  font-weight: 700;
-  font-size: 16px;
-  letter-spacing: 0.5px;
-  color: #000;
-  margin-bottom: 30px;
-}
-
-footer p.explore,
-footer p.our-sponsor,
-footer p.follow-us {
-  font-weight: 700;
-  font-size: 16px;
-  letter-spacing: 0.5px;
-  line-height: 20px;
-  color: #000;
-  margin-bottom: 30px;
-}
-
-footer nav a.nav-link {
-  margin-bottom: 14px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
-  letter-spacing: 0.5px;
-  color: #4e4b66;
-  transition: 0.5s ease;
-}
-
-footer nav a.nav-link:hover {
-  color: black;
-}
-
-footer nav.explore a.nav-link {
-  margin-top: -10px;
-}
-
-footer nav.sponsor {
-  transform: translateY(-2px);
-}
-
-footer nav.sponsor a:first-of-type img {
-  width: 122px;
-  height: 45px;
-}
-
-footer nav.sponsor a:nth-of-type(2) img {
-  width: 174px;
-  height: 28px;
-}
-
-footer nav.sponsor a:last-of-type img {
-  width: 80px;
-  height: 26px;
-}
-
-footer nav.follow-us a {
-  white-space: nowrap;
-}
-
-footer nav.follow-us .facebook,
-footer nav.follow-us .instagram,
-footer nav.follow-us .twitter,
-footer nav.follow-us .youtube {
-  width: 24px;
-  height: 24px;
-  margin-right: 16px;
-}
-
-footer nav.follow-us span {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 18px;
-  letter-spacing: 0.5px;
-  color: #6e7191;
-  transition: 0.5s ease;
-}
-
-footer nav.follow-us span:hover {
-  color: #000;
-}
-
 @media screen and (max-width: 991px) {
-  .navbar-nav {
-    margin-left: 0px;
-  }
-
-  nav.navbar ul.navbar-nav li:first-of-type {
-    order: 2 !important;
-  }
-
-  nav.navbar ul.navbar-nav li:nth-of-type(2) {
-    order: 3 !important;
-  }
-
-  nav.navbar ul.navbar-nav li:nth-of-type(3) {
-    order: 4 !important;
-  }
-
-  nav.navbar ul.navbar-nav li:last-of-type {
-    order: 1 !important;
-  }
-
-  .navbar-nav .nav-item .nav-link {
-    color: #14142b;
-    margin-right: 0px;
-  }
-
-  .navbar-nav .nav-item.dropdown .nav-link {
-    margin-bottom: 0;
-  }
-
-  .navbar-nav div {
-    order: 5;
-  }
-
-  .navbar-nav .copyright-nav {
-    font-weight: 400;
-    font-size: 13px;
-    font-size: 13px;
-    line-height: 22px;
-    letter-spacing: 0.75px;
-    color: #6e7191;
-  }
-
   .navbar-nav .form-search.payment::after {
     content: "";
     display: block;
@@ -509,17 +277,6 @@ footer nav.follow-us span:hover {
     right: 0;
     margin-top: 40px;
   }
-
-  nav.navbar ul.navbar-nav li:first-of-type::before,
-  nav.navbar ul.navbar-nav li:first-of-type::after,
-  nav.navbar ul.navbar-nav li:nth-of-type(2)::after,
-  nav.navbar ul.navbar-nav li:nth-of-type(3)::after {
-    content: "";
-    border-bottom: 0.5px solid #dedede;
-    position: absolute;
-    left: 0;
-    right: 0;
-  }
 }
 
 @media screen and (max-width: 767px) {
@@ -528,7 +285,7 @@ footer nav.follow-us span:hover {
   }
 
   .form-search.payment {
-    margin-top: 125px !important;
+    margin-top: 76px !important;
   }
 
   nav.total-payment h2 {
@@ -631,7 +388,7 @@ footer nav.follow-us span:hover {
   }
 
   .payment-detail h1.choose-payment {
-    margin-top: 75px !important;
+    margin-top: 65px !important;
   }
 
   .payment-detail h1.personal-info-heading {
@@ -664,7 +421,7 @@ footer nav.follow-us span:hover {
     padding-left: 24px;
   }
 
-  .input-group-text {
+  .input-group-text.payment-page {
     height: 48px;
     font-size: 14px;
     line-height: 24px;
@@ -691,69 +448,5 @@ footer nav.follow-us span:hover {
 
   .payment-detail .btn-order {
     width: 100%;
-  }
-
-  footer .logo {
-    width: 153px;
-    height: 60px;
-  }
-
-  footer p {
-    font-size: 14px;
-    line-height: 24px;
-  }
-
-  footer nav a.nav-link {
-    margin-bottom: 0px;
-    line-height: 26px;
-    letter-spacing: 0.75px;
-    color: #6e7191;
-  }
-
-  footer nav.explore a:nth-of-type(3) {
-    order: 4;
-  }
-
-  footer nav.sponsor a:first-of-type img {
-    width: 81px;
-    height: 30px;
-  }
-
-  footer nav.sponsor a:nth-of-type(2) img {
-    width: 106px;
-    height: 17px;
-  }
-
-  footer nav.sponsor a:last-of-type img {
-    width: 77px;
-    height: 25px;
-  }
-
-  footer p.explore,
-  footer p.our-sponsor,
-  footer p.follow-us {
-    font-weight: 600;
-    line-height: 28px;
-    letter-spacing: 0.75px;
-    margin-bottom: 0px;
-  }
-
-  footer nav.follow-us .facebook,
-  footer nav.follow-us .instagram,
-  footer nav.follow-us .twitter,
-  footer nav.follow-us .youtube {
-    width: 24px;
-    height: 24px;
-    margin-right: 0px;
-  }
-
-  footer nav.follow-us span {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 435px) {
-  footer nav.explore a.nav-link {
-    margin-top: 0px;
   }
 }
