--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -1,17 +1,3 @@
-body,
-html {
-  margin: 0;
-  padding: 0;
-}
-
-main {
-  display: grid;
-  grid-template-areas: "section aside";
-  grid-template-columns: 1.5fr 1fr;
-  grid-template-rows: 1fr;
-  height: 1024px;
-}
-
 main section.forgot-password {
   padding-left: 100px;
   padding-top: 80px;
@@ -110,7 +96,7 @@ main aside.forgot-password img {
 
 main aside.forgot-password {
   grid-area: aside;
-  background-color: white;
+  background-color: #f5f6f8;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -217,41 +203,8 @@ main aside.forgot-password p.forgot-password {
   color: #8692a6;
 }
 
-.btn-google,
-.btn-facebook {
-  font-family: "Mulish", sans-serif;
-  width: 182px;
-  height: 64px;
-  box-sizing: border-box;
-  background-color: #fff;
-  color: #a0a3bd;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
-  border-radius: 16px;
-  font-weight: 600;
-  font-size: 18px;
-  border: 1px solid transparent;
-  cursor: pointer;
-}
-
-.btn-google {
-  margin-right: 18px;
-}
-
 /* Responsive Breakpoints */
-@media screen and (max-width: 1200px) {
-  main {
-    grid-template-columns: 1.1fr 1fr;
-  }
-}
-
 @media screen and (max-width: 992px) {
-  main {
-    grid-template-areas: "aside";
-    grid-template-columns: 1fr;
-    height: 812px;
-    padding-bottom: 88px;
-  }
-
   main aside.forgot-password {
     padding-top: 150px;
   }
