--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -245,6 +245,8 @@ section.showing-movie .card .image-card {
 section.showing-movie .card img {
   width: 159px;
   height: 244px;
+  border-radius: 6px;
+  cursor: pointer;
 }
 
 /* Upcoming Movies */
@@ -328,6 +330,7 @@ section.upcoming-movies .container-upcoming-movie .card {
 section.upcoming-movies .container-upcoming-movie .card img {
   width: 159px;
   height: 244px;
+  border-radius: 6px;
 }
 
 section.upcoming-movies .container-upcoming-movie .card p {
@@ -343,7 +346,7 @@ section.upcoming-movies .container-upcoming-movie .card span {
   margin-top: -10px;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 13px;
   color: #a0a3bd;
   letter-spacing: 0.4px;
   text-align: center;
@@ -710,12 +713,12 @@ footer nav.follow-us span:hover {
 
   section.upcoming-movies .container-upcoming-movie .card,
   section.upcoming-movies .card-upcoming-movie {
-    width: 152px;
+    width: 175px;
     height: 330px;
   }
 
   section.upcoming-movies .container-upcoming-movie .card img {
-    width: 120px;
+    width: 130px;
     height: 185px;
   }
 
