--- a/src/assets/css/profile-page.css
+++ b/src/assets/css/profile-page.css
@@ -434,7 +434,7 @@ nav.details-order a:hover {
   }
 
   .form-search.profile {
-    margin-top: 92px !important;
+    margin-top: 110px !important;
   }
 
   .profile {
@@ -447,6 +447,10 @@ nav.details-order a:hover {
 }
 
 @media screen and (max-width: 576px) {
+  .form-search.profile {
+    margin-top: 90px !important;
+  }
+
   .profile .btn-update {
     width: 280px;
     height: 50px;
