--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -132,6 +132,14 @@ nav .nav-link {
   cursor: pointer;
 }
 
+.dropdown-menu.user {
+  transform: translateX(-60px);
+}
+
+.dropdown-item:active {
+  background-color: #5f2eea;
+}
+
 /* Header */
 header.homepage {
   margin-top: 90px;
@@ -622,8 +630,13 @@ footer nav.follow-us span:hover {
     order: 4 !important;
   }
 
-  nav.navbar ul.navbar-nav li:last-of-type {
+  nav.navbar ul.navbar-nav li:nth-of-type(4) {
     order: 1 !important;
+  }
+
+  nav.navbar ul.navbar-nav li:last-of-type {
+    order: 5 !important;
+    transform: translateY(-17px);
   }
 
   .navbar-nav .nav-item .nav-link {
@@ -636,7 +649,7 @@ footer nav.follow-us span:hover {
   }
 
   .navbar-nav div {
-    order: 5;
+    order: 6;
   }
 
   .navbar-nav .copyright-nav {
