--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -68,15 +68,7 @@ main section.forgot-password span.four {
   align-items: center;
 }
 
-main section.forgot-password span.one {
-  background-color: #fff;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 30px;
-  letter-spacing: 0.005em;
-  color: rgba(41, 3, 65, 0.5);
-}
-
+main section.forgot-password span.one,
 main section.forgot-password span.two,
 main section.forgot-password span.three,
 main section.forgot-password span.four {
@@ -88,6 +80,18 @@ main section.forgot-password span.four {
   line-height: 30px;
   letter-spacing: 0.005em;
   color: #ffffff;
+}
+
+main section.forgot-password span.one.main,
+main section.forgot-password span.two.main,
+main section.forgot-password span.three.main,
+main section.forgot-password span.four.main {
+  background-color: #fff;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 30px;
+  letter-spacing: 0.005em;
+  color: rgba(41, 3, 65, 0.5);
 }
 
 main aside.forgot-password img {
