--- a/src/assets/css/profile-page.css
+++ b/src/assets/css/profile-page.css
@@ -109,6 +109,22 @@ nav.details-order a:hover {
   filter: drop-shadow(0px 8px 16px rgba(73, 83, 99, 0.24));
 }
 
+.profile .info .img-container {
+  position: relative;
+}
+
+.profile .info .img-container img {
+  cursor: pointer;
+}
+
+.profile .info .file-input {
+  position: absolute;
+  width: 136px;
+  height: 136px;
+  opacity: 0;
+  cursor: pointer;
+}
+
 .profile h2 {
   font-weight: 600;
   font-size: 20px;
