add update with & without file

--- a/src/assets/css/order-history.css
+++ b/src/assets/css/order-history.css
@@ -290,7 +290,8 @@
 
 @media screen and (max-width: 767px) {
   .order-history .detail-order .btn-ticket,
-  .order-history .detail-order .btn-ticket-used {
+  .order-history .detail-order .btn-ticket-used,
+  .order-history .detail-order .btn-ticket-canceled {
     width: 279px;
   }
 }
