--- a/src/assets/css/profile-page.css
+++ b/src/assets/css/profile-page.css
@@ -120,7 +120,7 @@ nav.details-order a:hover {
 .profile .info .file-input {
   position: absolute;
   width: 136px;
-  height: 136px;
+  height: 100%;
   opacity: 0;
   cursor: pointer;
 }
@@ -324,11 +324,16 @@ nav.details-order a:hover {
   color: #a0a3bd;
 }
 
-.profile .account-privacy form input {
-  background: url(../img/eye.png) no-repeat;
-  background-size: 20px;
-  background-position-x: 94%;
-  background-position-y: 50%;
+.profile .account-privacy form div.password-container {
+  position: relative;
+}
+
+.profile .account-privacy form .img-eye {
+  position: absolute;
+  display: block;
+  bottom: 20px;
+  right: 20px;
+  cursor: pointer;
 }
 
 .profile .btn-update {
