--- a/src/assets/css/sign-up.css
+++ b/src/assets/css/sign-up.css
@@ -170,12 +170,16 @@ main aside.sign-up form input::-webkit-input-placeholder {
   color: #a0a3bd;
 }
 
-main aside.sign-up form input[type="password"] {
-  background-image: url(../img/eye.png);
-  background-repeat: no-repeat;
-  background-size: 20px;
-  background-position-x: 94%;
-  background-position-y: center;
+main aside.sign-up form div.password-container {
+  position: relative;
+}
+
+main aside.sign-up form .img-eye {
+  position: absolute;
+  display: block;
+  bottom: 20px;
+  right: 25px;
+  cursor: pointer;
 }
 
 main aside.sign-up .btn-join {
@@ -316,6 +320,13 @@ main aside.sign-up .btn-facebook::before {
     margin-top: 48px;
     margin-bottom: 20px;
     margin-right: auto;
+  }
+
+  main aside.sign-up form .img-eye {
+    bottom: 20px;
+    right: 25px;
+    width: 20px;
+    height: 20px;
   }
 
   main aside.sign-up h1 {
