--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -275,7 +275,6 @@ section.upcoming-movies .btn-month.main {
   border-radius: 4px;
   color: #fff;
   background-color: #5f2eea;
-  box-shadow: 0px 8px 30px rgba(95, 46, 234, 0.3);
   border: 1px solid transparent;
   font-size: 14px;
   line-height: 28px;
@@ -349,6 +348,7 @@ section.upcoming-movies .container-upcoming-movie .card p {
   color: #14142b;
   letter-spacing: 0.15px;
   text-align: center;
+  white-space: normal;
 }
 
 section.upcoming-movies .container-upcoming-movie .card span {
