--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -92,6 +92,85 @@ nav .nav-link {
   color: #a0a3bd;
 }
 
+.container-movie-search {
+  position: fixed;
+  z-index: 1;
+  top: 88px;
+  right: 411px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: #fff;
+  border: 0;
+}
+
+.result-search {
+  cursor: pointer;
+}
+
+.details-movie-search {
+  margin-top: -5.5px;
+}
+
+.container-movie-search h2 {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 24px;
+  letter-spacing: 0.75px;
+  color: #8692a6;
+}
+
+.container-movie-search h1 {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 24px;
+  letter-spacing: 0.75px;
+  color: #8692a6;
+}
+
+.container-movie-search p {
+  margin-top: -15px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 32px;
+  letter-spacing: 0.75px;
+  color: #121212;
+}
+
+.result-search img {
+  border-radius: 3px;
+}
+
+.search input {
+  position: absolute;
+  z-index: 1;
+  top: 20px;
+  left: 675px;
+  height: 48px;
+  border-radius: 4px;
+  padding-left: 50px;
+  background-color: #fff;
+  border: 1px solid #dedede;
+  box-sizing: border-box;
+  line-height: 26px;
+  letter-spacing: 0.75px;
+  color: #a0a3bd;
+  font-weight: 600;
+  font-size: 14px;
+  background-image: url(../img/ic-search-2.png);
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position-x: 16px;
+  background-position-y: center;
+}
+
+.search input::-webkit-input-placeholder {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: 0.75px;
+  color: #a0a3bd;
+}
+
 .dropdown a.dropdown-toggle {
   font-weight: 600;
   color: #414141;
